[gd_scene load_steps=5 format=2]

[ext_resource path="res://characters/enemies/enemy01.gd" type="Script" id=1]
[ext_resource path="res://characters/enemies/images/black_fire.png" type="Texture" id=2]
[ext_resource path="res://shared/sfx/laser_01.ogg" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 100.265

[node name="enemy01" type="Node2D" index="0"]

scale = Vector2( 0.3, 0.3 )
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}
can_damage_enemy = false
velocity = Vector2( -100, 0 )
rotation_range = 0.3
armor = 2
resources_value = 15
follow_player = false
follow_speed = 0.02
shoot_player = true
base_rotation_speed = 0.0
fixed_rotation_speed = false

[node name="Area2D" type="Area2D" parent="." index="0"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="Sprite" type="Sprite" parent="Area2D" index="0"]

position = Vector2( -0.553726, -0.275116 )
scale = Vector2( 0.994518, 0.997276 )
texture = ExtResource( 2 )
region_filter_clip = true
_sections_unfolded = [ "Animation", "Offset", "Region", "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="1"]

shape = SubResource( 1 )

[node name="shoot_interval" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 0.01
one_shot = false
autostart = false

[node name="laser_shooter" type="AudioStreamPlayer" parent="." index="2"]

stream = ExtResource( 3 )
volume_db = -17.0
autoplay = false
mix_target = 0
bus = "Master"

[connection signal="timeout" from="shoot_interval" to="." method="_on_shoot_interval_timeout"]


